syntax = "proto3";

package com.teamrocket;

option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

service AuthService {
  rpc verifyCustomer(NewCustomer) returns (VerifiedUser);
}

message NewCustomer {
  int64 roleId = 1;
  string email = 2;
  string password = 3;
}

message VerifiedUser {
  bool verified = 1;
}
